# maze-lvl-maker

./: Cargo.toml  README.md  maze.json  test.json
.github/workflows/: nix-check.yml
assets/: example.json
src/: main.rs
